* ---25/05/11---
* - Add an option to change animation speed. The current printed animation is updated on change.
* ---26/05/11---
* - Add an option to change foreground and background color. No visual feedback.
* ---27/05/11---
* - Correct some stuff (see mailing list to know why). And add a palette setter in animation.c and a visual feedback when foreground/background color are changed.
* - Some other minor improvement.
* ---19/09/11---
* - Restart working on tilem2 after holidays:)
* - Add new file getvar.c to handle get var function (receiving var from calc to PC).
* ---20/09/11---
* - Some improvement to the rcvmenu. 
* ---22/09/11---
* - Add the ti83pfr.skn file. This skin is for ti83plus.fr. The creator is Claude Clerc (aka claudiux). He donates the skin under GPL v3+ licence.Thanks to him !!!
* ---11/10/11---
* - Correct the getvar.c code to work correctly. Add columns to the tree view.
* - Add app receive handling. Set index column invisible.
* ---12/10/11---
* - Some corrections : receive dialog is transcient. Receive dialog is not destroyed when closed just hided. New refresh button to refresh var/app list.
* - Use a separate thread to receive files.
* ---14/10/11---
* - Add a feature to list ti82 and ti85 entries. User must prepare manually the link. Can't save a ti82 or ti85 entry (when selected in the rcvdialog). 
* - Lot of bug, code is really ugly. No error handling. The prepare_for_link_receive is not working. etc...
* ---11/11/11---
* - Benjamin add a totally new prefs dialog. Some unused function (print lcd in terminal by example) are deleted.
* ---12/11/11---
* - Working on ns silent get var.
* ---14/11/11--- 
* - Benjamin adds a totally new core task manager in the gui. Begin to convert the send files function to use it.
* - Use this task manager for macro. There's a little priority problem when a macro load a file. Load a file then run a macro at startup works fine.
*/
